FreeST/test/Programs/ValidTests/Modules/Diamond/C.fst
module C where 

c : Int -> Int 
c x = x * 2