FreeST/test/Programs/InvalidTests/SessionTypes/invalidIn/invalidIn.fst
fun : !Int -> Int
fun c = receive c
